Add get by class and duration. Fixed previous gets